5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4342/executions/1644_869.log
== TEST (2019-04-11 17:33:26) 
-- CODE:
var=float(input("preço sem desconto:"))

desconto= (var-(var*5/100))

if (var < 200):
print(var)
if (var >= 200):
print(var-desconto)
	
-- ERROR:
File "XXXX", line 6
    print(var)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 17:34:01) 
-- CODE:
var=float(input("preço sem desconto:"))

desconto= (var-(var*5/100))

if (var < 200):
	print(var)
if (var >= 200):
	print(var-desconto)
	
-- OUTPUT:
10.004500000000007
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 17:35:18) 
-- CODE:
var=float(input("preço sem desconto:"))

desconto= (var-(var*5/100))

if (var < 200):
	print(var)
if (var >= 200):
	print(var-desconto)
	
-- OUTPUT:
10.004500000000007
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 17:35:24) 
-- CODE:
var=input("preço sem desconto:")

desconto= (var-(var*5/100))

if (var < 200):
	print(var)
if (var >= 200):
	print(var-desconto)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    desconto= (var-(var*5/100))
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 17:35:26) 
-- CODE:
var=input("preço sem desconto:")

desconto= (var-(var*5/100))

if (var < 200):
	print(var)
if (var >= 200):
	print(var-desconto)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    desconto= (var-(var*5/100))
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 17:35:46) 
-- CODE:
var=float(input("preco sem desconto:"))

desconto= (var-(var*5/100))

if (var < 200):
	print(var)
if (var >= 200):
	print(var-desconto)
	
-- OUTPUT:
10.004500000000007
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 17:36:08) 
-- CODE:
var=float(input("preco sem desconto:"))

desconto= (var-(var*5/100))

if (var < 200):
	print(var)
if (var >= 200):
	print(var-desconto)
	
-- OUTPUT:
10.004500000000007
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 17:36:56) 
-- CODE:
var=float(input("preco sem desconto:"))

desconto= (var-(var*(5/100))

if (var < 200):
	print(var)
if (var >= 200):
	print(var-desconto)
	
-- ERROR:
File "XXXX", line 5
    if (var < 200):
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 17:37:11) 
-- CODE:
var=float(input("preco sem desconto:"))

desconto= (var-(var*5/100))

if (var < 200):
	print(var)
if (var >= 200):
	print(var-desconto)
	
-- OUTPUT:
10.004500000000007
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 17:37:20) 
-- CODE:
var=float(input("preco sem desconto:"))

desconto= (var-(var*(5/100))

if (var < 200):
	print(var)
if (var >= 200):
	print(var-desconto)
	
-- ERROR:
File "XXXX", line 5
    if (var < 200):
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 17:37:31) 
-- CODE:
var=float(input("preco sem desconto:"))

desconto= (var-(var*(5/100)))

if (var < 200):
	print(var)
if (var >= 200):
	print(var-desconto)
	
-- OUTPUT:
10.004500000000007
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 17:38:32) 
-- CODE:
var=float(input("preco sem desconto:"))

desconto= (var*(5/100))

if (var < 200):
	print(var)
if (var >= 200):
	print(var-desconto)
	
-- OUTPUT:
190.0855
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 17:38:36) 
-- CODE:
var=float(input("preco sem desconto:"))

desconto= (var*(5/100))

if (var < 200):
	print(var)
if (var >= 200):
	print(var-desconto)
	
-- EXECUTION TIME:
0.15555
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.0855
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.5035
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 17:38:50) 
-- CODE:
var=float(input("preco sem desconto:"))

desconto= (var*(5/100))

if (var < 200):
	print(var)
if (var >= 200):
	print(round(var-desconto, 2)
	
-- ERROR:
File "XXXX", line 10
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 17:38:58) 
-- CODE:
var=float(input("preco sem desconto:"))

desconto= (var*(5/100))

if (var < 200):
	print(var)
if (var >= 200):
	print(round(var-desconto, 2))
	
-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 17:39:02) 
-- CODE:
var=float(input("preco sem desconto:"))

desconto= (var*(5/100))

if (var < 200):
	print(var)
if (var >= 200):
	print(round(var-desconto, 2))
	
-- EXECUTION TIME:
0.147364
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 17:39:23) 
-- CODE:
var=float(input("preco sem desconto:"))

desconto= (var*(5/100))

if (var < 200):
	print(var)
if (var >= 200):
	print(round(var-desconto, 2))
	
-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
